--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -8,9 +8,11 @@ const year = new Date().getFullYear();
 	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pt-20 pb-4 text-center align-top text-gray-500 sm:flex-row sm:justify-between sm:text-xs"
 >
 	<div class="mr-0 sm:mr-4">
+        <a href="https://astro.build/themes/details/astro-cactus/">Astro Cactus Theme</a>
+	</div>
+	<div class="mr-0 sm:mr-4">
 		Copyright &copy; {year}
 		<span aria-label="rocket emoji">🚀</span>
-		Astro Cactus
 	</div>
 	<nav
 		aria-label="More on this site"
