update about to work page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
             I tend to enjoy smaller teams that have the privilege of moving fast. My day tools are Node and Typescript, but
             I love to work with OCaml, F#, and other ML-based languages, and have attempted to love Haskell a few times.
 		</p>
+		<p>
+		    Outside of tech, I'm a dance hobbyist. Join me for hip-hop or house dance classes in NYC!
+		</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
