update home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Welcome</h1>
 		<p class="mb-4">
-            My name is Dennis Dang. I currently work as a Senior Software Engineer with <a href="https://yomigames.gg/">Yomi Games</a>. 
-            A running joke is that I specialize in taking companies from seed to series A where I steer both engineering and product decisions. 
+            Currently a Senior Software Engineer at <a href="https://yomigames.gg/">Yomi Games</a>. 
+            I take companies from seed to series A where I steer both technical and non-technical product decisions. 
             I tend to enjoy smaller teams that have the privilege of moving fast. My day tools are Node and Typescript, but
             I love to work with OCaml, F#, and other ML-based languages, and have attempted to love Haskell a few times.
 		</p>
