--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,14 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Welcome</h1>
 		<p class="mb-4">
-            Currently a Senior Software Engineer at <a href="https://yomigames.gg/">Yomi Games</a>. 
-            I take companies from seed to series A where I steer both technical and non-technical product decisions. 
-            I tend to enjoy smaller teams that have the privilege of moving fast. My day tools are Node and Typescript, but
-            I love to work with OCaml, F#, and other ML-based languages, and have attempted to love Haskell a few times.
+			Currently a Senior Software Engineer at <a href="https://yomigames.gg/">Yomi Games</a>. I
+			steers companies from seed to series A and beyond where I lead or support both technical and
+			non-technical product decisions. I tend to enjoy smaller teams that have the privilege of
+			moving fast. My day tools are Node, Typescript, and the usual cloud offerings. I like to
+			tinker with OCaml, F#, and other ML-based languages, and have attempted to love Haskell a few
+			times.
 		</p>
-		<p>
-		    Outside of tech, I'm a dance hobbyist. Join me for hip-hop or house dance classes in NYC!
-		</p>
+		<p>Outside of tech, I'm a dance hobbyist. Join me for hip-hop or house dance classes in NYC!</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
