--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Welcome</h1>
 		<p class="mb-4">
-			Currently a Senior Software Engineer at <a href="https://yomigames.gg/">Yomi Games</a>. I
-			steer companies from seed to series A and beyond where I lead or support both technical and
-			non-technical product decisions. I enjoy teams that can make decisive, educated guesses that
-			solve today's problems. My day tools are Node, Typescript, and the usual cloud offerings. I
-			like to tinker with OCaml, F#, and other ML-based languages, and have attempted to love
-			Haskell a few times.
+			Currently going solo to build <a href="https://www.finny.finance/">Finny</a> to make financial planning easy.
 		</p>
-		<p>Outside of tech, I'm a dance hobbyist. Join me for hip-hop or house dance classes in NYC!</p>
+		<p>Outside of tech, I'm a dancer and especially fond of house dance.</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
