--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Welcome</h1>
 		<p class="mb-4">
-			Currently going solo to build <a href="https://www.finny.finance/">Finny</a> to make financial planning easy.
+			Currently going solo to build <a href="https://www.finny.finance/">Finny</a> to make financial planning easy. Outside of tech, I'm a dancer and especially fond of house dance.
 		</p>
-		<p>Outside of tech, I'm a dancer and especially fond of house dance.</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
